caspar (20030802)

  * more bugfixes: generating pdf from LaTeX was broken since caspar 20030716.
  * mk/docbook.mk: now uses pdflatex for generating PDF directly from LaTeX
    (without intermediate PostScript).  calls latex 3 times: make sure tocs
    get created.  no longer uses ps2pdf.
  * mk/caspar.mk: get rid of non-portable 'echo -n': this made caspar fail
    on Solaris.  Tnx Piet Lauwen for bugreport and suggestion for fix.
  * Makefile.am, bootstrap, setversion, configure.ac/configure.in:
    moved to autoconf 2.53 style, renamed configure.in to configure.ac: new
    autotools naming convention.  (Now uses same build system as AD1810
    Firewall ( http://mdcc.cx/ad1810-firewall/ ).

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Sat, 02 Aug 2003 23:26:06 +0200

caspar (20030718)

  * bugfix release
  * mk/docbook.mk: run pdfjadetex 3 times: fixes toc. rm -f intermediate
    files: no sure wether they will get created. added license referal

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Fri, 18 Jul 2003 11:12:43 +0200

caspar (20030716)

  * TODO: I'd like a TOC in HTML output from DocBook. (Even while we're doing
    nochunks mode)
  * README: added link to http://www.miwie.org/docbkmake/ , which seems
    similar to docbook.mk in it's goals
  * mk/docbook.mk: use pdfjadetex for generating pdf: fonts look better

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Wed, 16 Jul 2003 21:03:17 +0200

caspar (20030331)

  * mk/caspar.mk: ommitting SDIR results in scp to get skipped
  * mk/caspar.mk: added SUHS hack: now possible to install on multiple hosts.
  * mk/docbook.mk: sane default target added.
  * mk/Makefile.am: some fiddling to get make distcheck working with
    automake 1.7
  * README: documented new tricks.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Mon, 31 Mar 2003 22:04:18 +0200

caspar (20030203)

  * TODO: Found bug in caspar.mk.
  * README: Added note about cvs-conf.  Added pointer to Debian package.